# MY-Time

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
bootloader/: _bootloader.hex  bootloader.hex
src/: CMakeLists.txt  CMakelists.txt  lv_conf.h  main.c  pinetime_board.h
src/libs/nRF52/: LICENSE
src/libs/nRF52/cores/nRF5/: HardwarePWM.cpp  HardwarePWM.h  HardwareSerial.h  IPAddress.cpp  Print.cpp  Print.h  Printable.h  Stream.cpp  (+42 more)
src/smartwatch/: base.cpp  base.h  base_app.h  smartwatch.cpp  smartwatch.h  utils.cpp  utils.h
src/smartwatch/applications/: AppBacklight.h  AppDebug.h  Clock.h  HeartRate.h  HeartRate.h_  Notifications.h  Passkey.h  QMenu.h  ShowMessage.h  Steps.h
src/smartwatch/modules/: smartwatch.cpp  smartwatch.h
src/smartwatch/modules/backlight/: backlight.cpp  backlight.h
src/smartwatch/modules/battery/: battery.cpp  battery.h
src/smartwatch/modules/display/: display.cpp  display.h  fast_spi.cpp  fast_spi.h
src/smartwatch/modules/hr/: hr.cpp  hr.h
src/smartwatch/modules/lvgl/: lvglmodule.cpp  lvglmodule.h
src/smartwatch/modules/pinio/: I2S.cpp  I2S.h  fast_spi.cpp  fast_spi.h  i2c.cpp  i2c.h  pinio.cpp  pinio.h
src/smartwatch/modules/rtc_time/: rtc_time.cpp  rtc_time.h
src/smartwatch/modules/step_count/: bma4.c  bma4.h  bma421_config.h  bma4_defs.h  step_count.cpp  step_count.h
src/smartwatch/modules/touch/: touch.cpp  touch.h
src/smartwatch/modules/vibration/: vibration.cpp  vibration.h
src/smartwatch/modules/watchdog/: watchdog.cpp  watchdog.h
src/smartwatch/services/notification/: notification.cpp  notification.h
(+446 files in other folders)
